2009-05-01  Dave Morrison  <drm@finkproject.org>

	* Bootstrap.pm: check_host now gets a third optional argument $arch,
	and one of the messages it generates is now $arch-dependent

2009-04-28  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm: Put .patch in .deb of splitoffs as well as parent

2009-04-28  Benjamin Reed  <rangerrick@users.sourceforge.net>

	* Engine.pm, PkgVersion.pm, Validation.pm: allow PatchFileN(-MD5)?

2009-04-17  Dave Morrison  <drm@finkproject.org>

	* PkgVersion.pm: use architecture-based compiler wrapper when
	appropriate

2009-04-17  Benjamin Reed  <rangerrick@users.sourceforge.net>

	* PkgVersion.pm: Allow Type: bundle in splitoffs

2009-04-14  Daniel Macks  <dmacks@netspace.org>

	* Engine.pm: Undo change to PACKAGELOOP that is no longer needed

2009-04-13  Dave Morrison  <drm@finkproject.org>

	* PkgVersion.pm: don't use new style perl compiling for 5.10.0 under
	powerpc architecture

2009-04-09  Daniel Macks  <dmacks@netspace.org>

	* Validation.pm: Fix bug in gtk-doc "non-fink" URL detection

2009-04-09  Daniel Macks  <dmacks@netspace.org>

	* PkgVersion.pm, Validation.pm: .info "Patch" field is gone

2009-04-09  Daniel Macks  <dmacks@netspace.org>

	* Validation.pm: kill %a harder

2009-04-08  Dave Morrison  <drm@finkproject.org>

	* Validation.pm: allow -64bit type under x86_64
	* Validation.pm: make the default value for the Shlibs architecture
	field depend on the fink Architecture

2009-04-08  Daniel Macks  <dmacks@netspace.org>

	* Validation.pm: Only print first occurrence of each bad gtk-doc
	line

2009-04-07  Dave Morrison  <drm@finkproject.org>

	* Validation.pm: allow x86_64 as an Architecture value

2009-04-07  Daniel Macks  <dmacks@netspace.org>

	* Validation.pm: Catch gtk-doc HREF to non-fink locations

2009-04-06  Daniel Macks  <dmacks@netspace.org>

	* Notify/XTerm.pm: non-standard implemenation, but need stub here
	so that fink.conf:NotifyPlugin token can be resolved
